modify: cut/clear action, out wnd(table->flex, unvisible selection, kbd out, block some hotkey), scroll by up/down keys; bug fix: prev page on page 1

--- a/styleWnd.css
+++ b/styleWnd.css
@@ -7,6 +7,9 @@
   overflow: hidden;
   font-weight: bold;
 }
+*::selection {
+  background-color: rgba(0, 0, 0, 0);
+}
 
 body {
   background-color: #000000;
@@ -82,6 +85,7 @@ img {
 
 /************************************************/
 
+/*
 #mainTable {
   display: table;
   position: absolute;
@@ -105,4 +109,28 @@ img {
   padding: 5vh 5vw;
   font-size: 8.75vh;
   line-height: 1.4;
+}
+*/
+
+#txtContainer {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100vw;
+  height: 100vh;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#txtOut {
+  color: #ffffff;
+  max-width: 90vw;
+  max-height: 90vh;
+  padding: 5vh 5vw;
+  font-size: 8.75vh;
+  line-height: 1.4;
+  text-align: center;
 }
